@@ -20,6 +20,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Set;
+
 import org.assertj.core.data.MapEntry;
 import org.assertj.core.presentation.Representation;
 
@@ -30,12 +31,13 @@ public class ShouldContainEntries extends BasicErrorMessageFactory {
                                                                 Set<Entry<? extends K, ? extends V>> entriesWithWrongValue,
                                                                 Set<Entry<? extends K, ? extends V>> entriesWithKeyNotFound,
                                                                 Representation representation) {
-    if (entriesWithWrongValue.isEmpty()) return new ShouldContainEntries(actual, expectedEntries, entriesWithKeyNotFound);
+    if (entriesWithWrongValue.isEmpty())
+      return new ShouldContainEntries(actual, expectedEntries, getKeys(entriesWithKeyNotFound));
     if (entriesWithKeyNotFound.isEmpty())
       return new ShouldContainEntries(actual, expectedEntries,
                                       buildValueDifferences(actual, entriesWithWrongValue, representation));
     // mix of missing keys and keys with different values
-    return new ShouldContainEntries(actual, expectedEntries, entriesWithKeyNotFound,
+    return new ShouldContainEntries(actual, expectedEntries, getKeys(entriesWithKeyNotFound),
                                     buildValueDifferences(actual, entriesWithWrongValue, representation));
   }
 
@@ -44,7 +46,13 @@ public class ShouldContainEntries extends BasicErrorMessageFactory {
                                                            Representation representation) {
     return entriesWithWrongValues.stream()
                                  .map(entryWithWrongValue -> valueDifference(actual, entryWithWrongValue, representation))
-                                 .collect(toList());
+                                 .toList();
+  }
+
+  private static <K, V> List<K> getKeys(Set<Entry<? extends K, ? extends V>> entries) {
+    return entries.stream()
+                  .map(Entry::getKey)
+                  .collect(toList());
   }
 
   private static <K, V> String valueDifference(Map<? extends K, ? extends V> actual,
@@ -59,14 +67,14 @@ public class ShouldContainEntries extends BasicErrorMessageFactory {
 
   private <K, V> ShouldContainEntries(Map<? extends K, ? extends V> actual,
                                       Entry<? extends K, ? extends V>[] expectedEntries,
-                                      Set<Entry<? extends K, ? extends V>> notFound) {
+                                      Iterable<? extends K> keysNotFound) {
     super("%nExpecting map:%n" +
           "  %s%n" +
           "to contain entries:%n" +
           "  %s%n" +
-          "but could not find the following map entries:%n" +
+          "but could not find the following map keys:%n" +
           "  %s",
-          actual, expectedEntries, notFound);
+          actual, expectedEntries, keysNotFound);
   }
 
   private <K, V> ShouldContainEntries(Map<? extends K, ? extends V> actual,
@@ -83,13 +91,13 @@ public class ShouldContainEntries extends BasicErrorMessageFactory {
 
   private <K, V> ShouldContainEntries(Map<? extends K, ? extends V> actual,
                                       Entry<? extends K, ? extends V>[] expectedEntries,
-                                      Set<Entry<? extends K, ? extends V>> keysNotFound,
+                                      Iterable<? extends K> keysNotFound,
                                       List<String> valueDifferences) {
     super("%nExpecting map:%n" +
           "  %s%n" +
           "to contain entries:%n" +
           "  %s%n" +
-          "but could not find the following map entries:%n" +
+          "but could not find the following map keys:%n" +
           "  %s%n" +
           "and the following map entries had different values:%n" +
           "  " + valueDifferences,
